--- a/Server/package.json
+++ b/Server/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.22"
+    "mongoose": "^5.9.22",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
